--- a/DebugMod.csproj
+++ b/DebugMod.csproj
@@ -78,6 +78,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisableFog.cs" />
+    <Compile Include="ImprovedScreenshotMode.cs" />
+    <Compile Include="ModPreferences.cs" />
+    <Compile Include="DebugConsole.cs" />
     <Compile Include="ModMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
