--- a/DebugMod.csproj
+++ b/DebugMod.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ShinyChancePatch.cs" />
     <Compile Include="DisableFog.cs" />
     <Compile Include="ImprovedScreenshotMode.cs" />
     <Compile Include="InfiniteDamage.cs" />
